# minecraft-banbot

./: .env.example  Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
