[package]
name = "minecraft-banbot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
etherparse = "0.19.0"
lazy_static = "1.5.0"
pcap = "2.3.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
